[package]
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"
name = "redis"
version = "0.4.1"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/redis/0.4.0/redis/"
repository = "https://github.com/tokio-rs/redis"
description = """
An incomplete implementation of a Rust client and server. Used as a
larger example of an idiomatic Tokio application.
"""

[[bin]]
name = "redis-starter-rust"
path = "src/main.rs"

[dependencies]
async-stream = "0.3.5"
atoi = "2.0.0"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# Implements the types defined in the OTel spec
opentelemetry = { version = "0.22.0", optional = true }
# Integration between the tracing crate and the opentelemetry crate
tracing-opentelemetry = { version = "0.23.0", optional = true }
# Provides a "propagator" to pass along an XrayId across services
opentelemetry-aws = { version = "0.10.0", optional = true }
# Allows you to send data to the OTel collector
opentelemetry-otlp = { version = "0.15.0", optional = true }

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1.37.0", features = ["test-util"] }

[features]
otel = [
    "dep:opentelemetry",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry-aws",
    "dep:opentelemetry-otlp",
]
