[package]
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"
name = "redis"
version = "0.4.1"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/redis/0.4.0/redis/"
repository = "https://github.com/tokio-rs/redis"
description = """
An incomplete implementation of a Rust client and server. Used as a
larger example of an idiomatic Tokio application.
"""

[[bin]]
name = "redis-starter-rust"
path = "src/main.rs"

[dependencies]
async-stream = "0.3.5"
atoi = "2.0.0"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
rand = "0.8.5"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1.37.0", features = ["test-util"] }

[profile.dev]
opt-level = 0
lto = 'off'
incremental = true
codegen-units = 256
debug = true
strip = "none"

[profile.release]
opt-level = 3
lto = "fat"
incremental = false
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
